infrastructure/production/emqx-operator/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: mqtt.raelix.com
    http:
      paths:
      - backend:
          service:
            name: emqx-dashboard
            port:
              number: 18083
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - '*.raelix.com'
